# pkg/core/server/grpc.go
@@ -161,6 +161,7 @@ func (s *Server) GetBlock(ctx context.Context, req *core_proto.GetBlockRequest) 
 	blockTxs, err := s.db.GetBlockTransactions(ctx, req.Height)
 
 	txs := []*core_proto.SignedTransaction{}
+	tx_responses := []*core_proto.TransactionResponse{}
 	for _, tx := range blockTxs {
 		var transaction core_proto.SignedTransaction
 		err = proto.Unmarshal(tx.Transaction, &transaction)
@@ -168,6 +169,11 @@ func (s *Server) GetBlock(ctx context.Context, req *core_proto.GetBlockRequest) 
 			return nil, err
 		}
 		txs = append(txs, &transaction)
+		res := &core_proto.TransactionResponse{
+			Txhash: transaction.TxHash(),
+			Transaction:  &transaction,
+		}
+		tx_responses = append(tx_responses, res)
 	}
 
 	res := &core_proto.BlockResponse{
@@ -178,6 +184,7 @@ func (s *Server) GetBlock(ctx context.Context, req *core_proto.GetBlockRequest) 
 		Transactions:  txs,
 		CurrentHeight: currentHeight,
 		Timestamp:     timestamppb.New(block.CreatedAt.Time),
+		TransactionResponses: tx_responses,
 	}
 
 	return res, nil
